fixed overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -50,19 +50,19 @@ body,
 .buttons {
   display: inline;
   background-color: #ffffff;
-  @media screen and (min-width: 350px) {
+  @media screen and (min-width: 400px) {
     transform: scale(1.5);
   }
 }
 
 .button-padding {
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     padding: 15px;
   }
   @media screen and (max-width: 350px) {
     padding: 5px;
   }
-  @media screen and (min-width: 400px) {
+  @media screen and (min-width: 450px) {
     padding: 20px;
   }
 }
